# trajectory_generator

./: .gitignore  CMakeLists.txt  README.md  package.xml
.clang-format/: .clang-format
cmake/: Config.cmake.in
cpp/: CMakeLists.txt
cpp/include/trajectory_generator/: spline.hpp  spline_trajectory.hpp  trajectory_generator.hpp  visibility_control.hpp
cpp/src/: spline.cpp  trajectory_generator.cpp
cpp/test/: unit_test_trajectory_generator.cpp
include/trajectory_generator/: spline.hpp  trajectory_generator.hpp  visibility_control.hpp
src/: trajectory_generator.cpp
test/: unit_test_trajectory_generator.cpp
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/include/trajectory_generator/: spline_trajectory.hpp  trajectory_generator.hpp
trajectory_generator/src/: spline.cpp  spline_trajectory.cpp  trajectory_generator.cpp
trajectory_generator/test/: unit_test_trajectory_generator.cpp
